# halfvio

./: .Rhistory  .gitignore  README.md  cnproc.c  generate.py  halfvio.py  justfile  perf.py  plot.r  pyproject.toml  timings.yaml
tests/: test_smoke.py
